注释脚本文件